--- a/msvc/wswan/msvc_2010_360/msvc_2010_360.vcxproj.filters
+++ b/msvc/wswan/msvc_2010_360/msvc_2010_360.vcxproj.filters
@@ -113,9 +113,6 @@
     <ClCompile Include="..\..\..\mednafen\wswan\main.cpp">
       <Filter>Source Files\mednafen\wswan</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\wswan\memory.cpp">
-      <Filter>Source Files\mednafen\wswan</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\mednafen\wswan\rtc.cpp">
       <Filter>Source Files\mednafen\wswan</Filter>
     </ClCompile>
@@ -123,6 +120,9 @@
       <Filter>Source Files\mednafen\wswan</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\mednafen\wswan\tcache.cpp">
+      <Filter>Source Files\mednafen\wswan</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\wswan\wswan-memory.cpp">
       <Filter>Source Files\mednafen\wswan</Filter>
     </ClCompile>
   </ItemGroup>
