--- a/msvc/ngp/msvc-2010-360/msvc-2010-360.vcxproj
+++ b/msvc/ngp/msvc-2010-360/msvc-2010-360.vcxproj
@@ -147,22 +147,22 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Xbox 360'">
-    <OutputFile>$(OutDir)libretro_xdk360$(TargetExt)</OutputFile>
+    <OutputFile>$(OutDir)mednafen_ngp_libretro_xdk360$(TargetExt)</OutputFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='CodeAnalysis|Xbox 360'">
-    <OutputFile>$(OutDir)libretro_xdk360$(TargetExt)</OutputFile>
+    <OutputFile>$(OutDir)mednafen_ngp_libretro_xdk360$(TargetExt)</OutputFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Profile|Xbox 360'">
-    <OutputFile>$(OutDir)libretro_xdk360$(TargetExt)</OutputFile>
+    <OutputFile>$(OutDir)mednafen_ngp_libretro_xdk360$(TargetExt)</OutputFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Profile_FastCap|Xbox 360'">
-    <OutputFile>$(OutDir)libretro_xdk360$(TargetExt)</OutputFile>
+    <OutputFile>$(OutDir)mednafen_ngp_libretro_xdk360$(TargetExt)</OutputFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Xbox 360'">
-    <OutputFile>$(OutDir)libretro_xdk360$(TargetExt)</OutputFile>
+    <OutputFile>$(OutDir)mednafen_ngp_libretro_xdk360$(TargetExt)</OutputFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_LTCG|Xbox 360'">
-    <OutputFile>$(OutDir)libretro_xdk360$(TargetExt)</OutputFile>
+    <OutputFile>$(OutDir)mednafen_ngp_libretro_xdk360$(TargetExt)</OutputFile>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Xbox 360'">
     <ClCompile>
